glance/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: glance
  namespace: glance
  labels:
    app.kubernetes.io/name: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: glance
  template:
    metadata:
      labels:
        app.kubernetes.io/name: glance
    spec:
      volumes:
        - name: glance-config
          configMap:
            name: glance
            defaultMode: 420
      containers:
        - name: glance
          image: glanceapp/glance:v0.5.1
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: glance-config
              mountPath: /app/glance.yml
              subPath: glance.yml
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
