glance/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: glance
  namespace: glance
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    io.kompose.service: glance
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
