glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
spec:
  defaultBackend:
    service:
      name: glance
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - glance
