glance/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance-ingressroute
  namespace: glance
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`glance.mizar.scalar.cloud`)
      priority: 10
      services:
        - name: glance
          kind: Service
          namespace: glance
          port: http
  tls:
    secretName: glance-tls
